# CppProject

RedisProcess/: CMakeLists.txt
RedisProcess/conf/: log4cplus.properties
RedisProcess/src/: CMakeLists.txt  RedisProcess.cpp  RedisProcess.h  main.cpp
RedisProcess/src/config/: INIConfig.cpp  INIConfig.h
RedisProcess/src/except/: RedisException.cpp  RedisException.h
