CMAKE_MINIMUM_REQUIRED(VERSION 2.8.4)
PROJECT(RedisProcess C CXX)
ADD_DEFINITIONS("-g")
SET(GLOBAL_DEPS_ROOT "$ENV{HOME}/resources")

INCLUDE_DIRECTORIES(
    ${GLOBAL_DEPS_ROOT}/include
)

LINK_DIRECTORIES(
    ${GLOBAL_DEPS_ROOT}/lib
)

ADD_SUBDIRECTORY(src)

INSTALL(FILES build/src/RedisProcess DESTINATION bin)
